--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Ta Tien Hai's<br />
 						Portfolio</h1>
-						<p>Entry-level Data Analyst skilled in SQL, PowerBI, R and Excel (I'm currently learning Python too).<p /> 
+						<p>Entry-level Data Analyst skilled in SQL, PowerBI, R and Excel.<p /> 
 							<p>Scroll down to see more about me and my projects!<p/> 
 						
 						<ul class="actions">
